<resources>

    //Splash Title
    <string name="app_name">DustNShine</string>
    <string name="title">Customer</string>

    <!--Sign In-->
    <string name="signin">Sign In</string>
    <string name="username">Username or email</string>
    <string name="password">Password</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="dustnshine">Dust n\' Shine</string>
    <string name="newuser">New User? </string>
    <string name="createaccount"> Create account</string>
    <string name="keepsignedin">Keep me signed in</string>
    <string name="okay">OK</string>
    <string name="close">CLOSE</string>

    <!--Sign Up-->
    <string name="signup">Sign Up</string>
    <string name="reg">Registration</string>
    <string name="personalinformation">Personal Information</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email Address</string>
    <string name="retypepassword">Re-type Password</string>
    <string name="location">Location</string>
    <string name="houseno">House no.</string>
    <string name="street">Street</string>
    <string name="barangay">Barangay</string>
    <string name="citymunicipality">City/Municipality</string>
    <string name="province">Province</string>
    <string name="zipcode">Zip Code</string>

    <!--Forgot Password-->
    <string name="findyouraccount">Find Your Account</string>
    <string name="enteryouremail">Enter Your Email</string>
    <string name="resetyourpassword">Reset Your Password</string>
    <string name="newpassword">New Password</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="resetcode">Reset Code</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="enteremail">Please enter your email to search for your account</string>

    <!--Manage Account-->
    <string name="managecards">Manage Cards</string>
    <string name="manageaccount">Manage Account</string>
    <string name="viewpersonalinfo">View Personal Info</string>
    <string name="managebankaccounts">Manage Bank Accounts</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>

    <!--Checkout-->
    <string name="customerdetails">Customer Details</string>
    <string name="customername">Customer name:</string>
    <string name="contactnumber">Contact number:</string>
    <string name="locationdetails">Location:</string>
    <string name="bookingdetails">Booking Details</string>
    <string name="paymentmethod">Payment Method</string>
    <string name="totalcost">Total Cost:</string>
    <string name="changemethod">Change Method</string>
    <string name="checkout">Checkout</string>
    <string name="companyname">Company Name:</string>
    <string name="dateandtime">Date and Time:</string>
    <string name="servicename">Services:</string>
    <string name="notes">Notes:</string>
    <string name="pesosign">₱</string>
    <string name="cash">Cash</string>

    <!--Feedback-->
    <string name="feedbakcdescription">Your feedback matters. Write down your experience or what we can improve in our service.</string>
    <string name="howsourwork">How\'s Our Work?</string>
    <string name="rating">Rating</string>
    <string name="done">Done</string>
    <string name="typeyourfeedback">Type your feedback...</string>
    <string name="agree">I agree</string>
    <string name="feedback">Feedback</string>

    <!--Dashboard-->
    <string name="Manage">View Profile</string>
    <string name="CleaningCompanies">Cleaning Companies in</string>
    <string name="Location">Dagupan City</string>
    <string name="Address">123 Arellano Street, Dagupan City</string>
    <string name="Recommendation">Recommended</string>
    <string name="FeaturedServices">Featured Service</string>
    <string name="genralcleaning">General Cleaning</string>
    <string name="congen">Cleaning of whole house</string>
    <string name="garagecleaning">Garage Cleaning</string>
    <string name="gardencleaning">Garden Cleaning</string>
    <string name="repair">Repair</string>

    <!--Company Detail-->
    <string name="companydetails">Company Details</string>
    <string name="selectdetails">Select the details for your cleaning</string>
    <string name="housetype">What is your house type?</string>
    <string name="bedrooms">How many bedrooms?</string>
    <string name="bathrooms">How many bathrooms</string>
    <string name="services">Services</string>
    <string name="extraservices">Customize your cleaning with optimal extra service</string>
    <string name="describe">Please describe any other needs...</string>
    <string name="emailaddress">Email:</string>
    <string name="telephonenumber">Telephone Number:</string>
    <string name="mobile">Mobile Number:</string>
    <string name="noservices">No services available...</string>

    <!--Booking-->
    <string name="bookinghistory">Booking History</string>
    <string name="notification">Notification</string>
    <string name="next">Next</string>
    <string name="bookingDetails">Booking Details:</string>
    <string name="notransactionsyet">No Transactions Yet . . .</string>
    <string name="payment">Payment:</string>
    <string name="comment">Comment:</string>
    <string name="paymentacknowledge">Payment Acknowledge</string>
    <string name="bookedservices">Booked Services</string>

    <!--Date and Time-->
    <string name="eightam">8:00 AM</string>
    <string name="nineam">9:00 AM</string>
    <string name="tenam">10:00 AM</string>
    <string name="elevenam">11:00 AM</string>
    <string name="twelvepm">12:00 PM</string>
    <string name="onepm">1:00 PM</string>
    <string name="twopm">2:00 PM</string>
    <string name="threepm">3:00 PM</string>
    <string name="fourpm">4:00 PM</string>
    <string name="fivepm">5:00 PM</string>

    <!--Notification-->
    <string name="servicedone">service is done!</string>

    <!--Services-->
    <string name="somethingwentwrong">Oops... Something went wrong</string>
    <string name="nocompanies">No companies are providing this service at the moment</string>



</resources>