<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center|top"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="220dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/customerdetails"
                android:textColor="@color/app_blue"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="35dp"
                android:text="@string/customername"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="65dp"
                android:text="@string/locationdetails"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="95dp"
                android:text="@string/contactnumber"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="125dp"
                android:text="@string/bookingdetails"
                android:textColor="@color/app_blue"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="280dp"
                android:text="@string/paymentmethod"
                android:textColor="@color/app_blue"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:layout_marginTop="330dp"
                android:text="@string/changemethod"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="370dp"
                android:text="@string/totalcost"
                android:textColor="@color/app_blue"
                android:textSize="20sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnServerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_corners_button_layout"
        android:backgroundTint="@color/app_yellow"
        android:padding="10dp"
        android:text="@string/checkout"
        android:textColor="@color/white"
        android:textSize="18sp" />

</FrameLayout>