<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReturnBooking"
        android:layout_width="44dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_angle_small_left"
        android:backgroundTint="@color/app_theme_blue" />

    <TextView
        android:id="@+id/txtBookingHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/btnReturnBooking"
        android:text="@string/feedback"
        android:textColor="@color/app_theme_gold"
        android:textSize="25dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/txtFeedbackDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/feedbakcdescription"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtHowItWorks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtFeedbackDescription"
            android:layout_marginTop="30dp"
            android:text="@string/howsourwork"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardFeedback"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/txtHowItWorks"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="7dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:cursorVisible="true"
                    android:gravity="start"
                    android:hint="@string/typeyourfeedback"
                    android:maxLength="50"
                    android:paddingBottom="10dp"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardFeedback"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:text="@string/rating"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layoutCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtRating"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree"
                android:textSize="15sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnServerLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutCheckbox"
            android:layout_marginStart="15dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_corners_button_layout"
            android:backgroundTint="@color/app_theme_gold"
            android:padding="10dp"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>


</RelativeLayout>