<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"

        android:elevation="0dp"
        android:layout_margin="20dp"
        android:innerRadius="0dp"
        android:shape="ring"
        app:cardCornerRadius="00dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/clientImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/user" />


    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/cardView">

        <TextView
            android:id="@+id/detailsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customerdetails"
            android:textColor="@color/app_theme_blue"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailsTv"
            android:layout_marginTop="10dp"
            android:text="@string/customername"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/customerNameBooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailsTv"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/nameTv"
            android:text="@string/customername"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/locTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameTv"
            android:layout_marginTop="5dp"
            android:text="@string/locationdetails"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/customerLocationBooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameTv"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/locTv"
            android:text="@string/location"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/conTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locTv"
            android:layout_marginTop="5dp"
            android:text="@string/contactnumber"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contactNumberBooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locTv"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/conTv"
            android:text="@string/contactnumber"
            android:textSize="15sp" />

    </RelativeLayout>

</RelativeLayout>